@@ -4,6 +4,10 @@
   <string id="30002">Favorite SRF Podcasts</string>
   <string id="30003">Add to SRF Favorites</string>
   <string id="30004">Remove from SRF Favorites</string>
+  <string id="30005">Newest Shows</string>
+  <string id="30006">Recommended Shows</string>
+  <string id="30007">Most Clicked Shows</string>
+  <string id="30008">All Shows</string>
   <string id="30104">Use Fan Art</string>
   <string id="30101">Force Menu Views</string>
   <string id="30102">ViewID for Videos</string>
